fix resize overflow

--- a/src/App.module.less
+++ b/src/App.module.less
@@ -15,6 +15,9 @@
 
   &:global(.no-subtitle) {
     grid-template-columns: 1fr 0 0;
+    .resize .fat-bar {
+      display: none;
+    }
   }
   &:global(.no-video) {
     grid-template-columns: 1fr;
